# soil-nutrient-prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: data_preprocessing_and_EDA.ipynb
scripts/: data_preparation.py  main.py
src/digital_soil_mapping/: main.py
src/digital_soil_mapping/notebooks/: data_preprocessing.ipynb  soil_nutrient_modelling.ipynb
src/digital_soil_mapping/soil_nutrients/: preprocessing.py
