[project]
name = "soil-nutrient-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.13",
    "folium>=0.20.0",
    "geemap>=0.37.1",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
